@@ -6,7 +6,7 @@ http://atheme.net/downloads/atheme-services-6.0.8.tar.bz2
 http://atheme.net/
 BSD
 A portable and secure set of open-source and modular IRC services
-~amd64 ~sparc ~x86 ~x86-fbsd
+~amd64 ~sparc ~x86 ~x86-fbsd ~amd64-linux
 base eutils flag-o-matic multilib perl-module portability prefix toolchain-funcs
 largenet ldap nls +pcre perl profile ssl
 
