@@ -4,23 +4,23 @@ Hash: SHA256
 AUX atheme-services-6.0.8-configure-disable.patch 4067 RMD160 83b845addd7af78d10a4b8447e9ec3c88f7efa17 SHA1 a893c2fab189495b31525332a8c4c9ffdcbd3aaf SHA256 861b9b458e6e2122aca923425dec407a5d2a13fecde613544c5aafb2cb161595
 AUX atheme-services.initd.in 1226 RMD160 5f8c08d9852ebbfb45728746231e6e403d315863 SHA1 860fc6cc6d130eeffcdafb6ae6fff51bb6c14ccb SHA256 4199d305397133d34ad15eeaa19b94f6f6b971b33d23cbeeaa0dc5bdb57ca1a6
 DIST atheme-services-6.0.8.tar.bz2 860407 RMD160 31c1ba46ee5ede98108b51970bde134b259f1b3b SHA1 d201a41592fe0137e00625d7d6ed99fd79a752a7 SHA256 7dffcf8e768ca442d1fcc2b0e3031c41e34f6b3d8ee47164f84f20cb30515c24
-EBUILD atheme-services-6.0.8.ebuild 2748 RMD160 c51bb5398f391a1f94cfc20246c0d3a6edefe113 SHA1 a9fc403eb3c79b787de2e8f108bb6295c53958d3 SHA256 42048749f7f29b301cbcf6af20c0e1b38881da33969d935429b98e4c644531ba
-MISC ChangeLog 1857 RMD160 f9ccad898e40429a94df7ef5d0e71a9e11a1ed22 SHA1 ac0c5c29e16d7c05857ec9df386e147a1aa0c152 SHA256 a186512dc6d8b601dad038767a235919d4eec6b5ff5192998cdb16cc43d26f2d
+EBUILD atheme-services-6.0.8.ebuild 2778 RMD160 d5ccfe4874b963741dcbe8dea50c6b97e7f5eee9 SHA1 7b948c6efaa9b2a566f811daf244af48abdaa9d4 SHA256 a4cf25e0384b03bf8cdce5fcab64e18fd84b8839d1eafdbd16fef5e9b4904b04
+MISC ChangeLog 1997 RMD160 e48c3faf3e774e04b4ab1f711b180b7f31a45a81 SHA1 8a30ace6354de5224e6057e0af5ae9b6d4b34a8c SHA256 42633a113817b926411facd846a3609a11601318c2f3b6e7e4976de49e3d2ae9
 MISC metadata.xml 522 RMD160 62256e4afba65ef587fb4314adeeb178b57246c0 SHA1 6765fd4304513a1aca8ba55294f417e11f1a4c8d SHA256 0eb4b26200c6ae7b351c45b9744c0bedd49e2de925f09161af89e5aefb8a5dcf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iQIcBAEBCAAGBQJN9tCqAAoJEHQ6UuhrqBBQg88P/R74ogwWfBJdIRNyBCQOu0j5
-TXGDuus2XmC6jO/ozORPOCZHCXP2fmOIq+xDhM/9A5VJlHGCzKXGRIL3btZHUdoT
-NSlLdEZHaXIYoSB9W5kEeiy/ci6APqeHDh1WEMuO3AYqVaHQhxdZfk1iuVWqkp0v
-oB8LDMFLn9Etwj28qXRGHH0Sw4nhYW6ccUCidsGeZwXYg9cmZlArEcy0PEX8kWON
-5TbC+N7uSWc8FnNUhdJC4VqTVlvsXtorc1vNcPugNNFGlVyLDumSteFbo0rtQXs1
-4dIDEeaxFY/KNUx8xv30cgvDpe2Zhdo8YvvpI1BCd6X0CbLjoI68KlBu9uwH3yBf
-DMb8Brqu2zlQN1LWsTU5dDqa0Po0Su6DHfb0KGkykCgOHgPL6X8WsT/MGUDn6Aan
-p43g6Raaostzkq0VXFBMmxjjxKyRrCMK+DOcmcxQeAQc53933j4e245TpEQG64/A
-qkZx2iTBrt0+D1b0uOpyt/AFdStPVbaiAsru5AKms9n4lD5m1qLTsBlYQBFlzVVQ
-M0dHhwkE3rGjIGhWObrKQ30jNNRJ7LWTc4LAahasuK0NRgQPCLdgJpuxZmTKHCMb
-WdQGgZeVKZbb0QLWw+qBSvLzvA/HOqk9F+89dlG++r2k7GAY235JYlAiu8C1nHwl
-ELshKgeZt0aJREYHs1yh
-=GDt5
+iQIcBAEBCAAGBQJOA//eAAoJEHQ6UuhrqBBQtFsQAJph7dwrYvGcVel5uD2xTn4I
+T2JhnOQjMWQvMLRDMldlxVHgYpFu4t4SuTT70Ate0DX6IsZO62npZUqpYajzcdiN
+Xo//LgmaJD5SVlq3x7H4+HVMEGdiiJJ2TSUAv2vDc59XwVQLZOcKexrSsMZN6pr3
+1mBqze76dT/dfE4bJ94IZ+ypZrZWBpsEEK3Hm29kitnbIdINMe3Krb3EtKUaL/OL
+QGHfyn00I8Sejj6oF0mzryrAOUSgLwLAXZIvu1zlWgPEpEFMfxHbXmjpeKpSKMjw
+rAr4mImODECN6mdKzyLFA2f+Etq2Do+RCQMimQLRxT6Rd3Zxn31g29rtBXjHGlvx
+bzfxpzAQA5BPUEg8boi2UpgghwySIRZzTwjuL02sR3H38zBQMV4kC8rrYC/7siRc
+aBCl/DNVzIU5wQ4KZzt9x+bjf4GxNef5lLZAmswjSt30GORYWgHBYCwcgI6uJTIY
+kBgoJKJH9C8BfDp8PtUwSfvGVOhU2B85Fge6j0iaznA69RzUztJSIGUXxl7XO1SV
+470gZP9aSZBw3cba1bHWXbY/jH/klwwyZCdEulatf/KDzgu7S6WM0YruVpIhiz+J
+GL0NmQ4hUQ/EisyqKgNdLmN4dpwyHzeDsEcZroF+7vTklvBz9SYQ1TXgp5OLEx3h
+bPdiohA+QC9JHDrfiuYi
+=5KrS
 -----END PGP SIGNATURE-----
